First draft just to test out.

--- a/imperative_programming.html
+++ b/imperative_programming.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Imperative Programming
+        </title>
+    </head>
+    <body>
+        <h1>
+            Imperative Programming
+        </h1>
+    </body>
+</html>
