--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 			shows).
 		</p>
 		<p>
-			The reason I'm raining on everyone's [Code Parade](codeparade.net) is because I
+			The reason I'm raining on everyone's <a href="codeparade.net">Code Parade</a> is because I
 			bought into all of the Knight Rider nonsense when I was littler. The first time
-			I tried to code, I typed "if x=2y then y=" into the Smile Basic terminal on my
+			I tried to code, I typed <code>if x=2y then y=</code> into the Smile Basic terminal on my
 			DSI. This obviously did not work for several reasons: 0.5x is not a valid
 			datatype, that's not how computers work, and I thought I was smart. In reality,
 			coding is alot different. I'm too tired to continue writing for tonight, but
@@ -38,7 +38,10 @@
 			the course intro!
 		</p>
 		<h3>Table of Jumbled Resources I Guess...</h3>
-		[Crash Course Computer Science (Please Watch!!!!)](https://www.youtube.com/watch?v=tpIctyqH29Q&list=PLH2l6uzC4UEW0s7-KewFLBC1D0l6XRfye)
-
-		[Lesson 1: Imperative Instructions]()
+		<p>
+			<a href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PLH2l6uzC4UEW0s7-KewFLBC1D0l6XRfye">Crash Course Computer Science (Please Watch Them!!!!)</a>
+		</p>
+		<p>
+			<a>Lesson 1: Imperative Instructions</a>
+		</p>
 </html>
