--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			shows).
 		</p>
 		<p>
-			The reason I'm raining on everyone's <a href="https://www.codeparade.net">Code Parade</a> is because I
+			The reason I'm raining on everyone's <a href="/codeparade.net">Code Parade</a> is because I
 			bought into all of the Knight Rider nonsense when I was littler. The first time
 			I tried to code, I typed <code>if x=2y then y=</code> into the Smile Basic terminal on my
 			DSI. This obviously did not work for several reasons: 0.5x is not a valid
